--- a/MVC Assignment/MVC Assignment.csproj
+++ b/MVC Assignment/MVC Assignment.csproj
@@ -5,4 +5,12 @@
     <RootNamespace>MVC_Assignment</RootNamespace>
   </PropertyGroup>
 
+  <ItemGroup>
+    <Folder Include="Controllers\" />
+    <Folder Include="Models\" />
+    <Folder Include="Views\Home\" />
+    <Folder Include="Views\Shared\" />
+    <Folder Include="wwwroot\" />
+  </ItemGroup>
+
 </Project>
